2007-02-07  Zack Weinberg  <zackw@panix.com>

	* tests/two_parent_workspace_commands_that_fail
	* tests/two_parent_workspace_pluck: New tests (expected to fail).
	* testsuite.lua: Add them.
	* cmd_merging.cc (merge_into_workspace): Standardize a diagnostic.

2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* cmd_merging.cc (CMD(merge_into_workspace)): N() out if user is
f	trying to merge in the workspace's current revision.
	* tests/merge_into_workspace_same_rev/*: New test.
	* testsuite.lua: Add it.

2006-09-25  Zack Weinberg  <zackw@panix.com>

	* work.cc (workspace::get_work_rev): Fold into sole caller,
	get_base_and_current_roster_shape.
	* work.hh: Don't declare get_work_rev.

2006-09-21  Zack Weinberg  <zackw@panix.com>

	* roster.cc (equal_shapes): New function.
	(shallow_equal): Add boolean argument which says whether to
	compare file contents.
	(unify_rosters): Add kluge to detect shape rosters, which may not
	agree on file contents even after unification.
	(make_roster_for_merge, make_roster_for_nonmerge): Add note about
	interfaces.  Simplify the interface not used by the unit tests.
	Don't pass an app_state down to this level.
	(make_roster_for_revision): Add variant that takes a database and
	a node_id_source.  Logic for extracting rosters and csets from
	revisions moved down to make_roster_for_(non)merge level.
	* roster.hh: Update prototype of shallow_equal; new argument
	defaults to true.  Declare equal_shapes a friend of roster_t.
	Declare new make_roster_for_revision variant.
	* work.cc (workspace::get_current_roster_shape): Use
	make_roster_for_revision, except when the parent is the null ID.

	* tests/merge_into_workspace_files_added: Don't force failure.

2006-09-18  Zack Weinberg  <zackw@panix.com>

	Fix unit test broken by previous change (due to ill luck,
	basically); also makes this test somewhat more rigorous.
	* roster.cc (random_actions): Always compare with the
	just-previous roster; the random walk can return to an earlier