@@ -1,3 +1,9 @@
+2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>
+
+	* cmd_merging.cc (CMD(pluck)): Migrate to new internal
+	multi-parent workspace API.
+	* tests/two_parent_workspace_pluck: Un-xfail test.
+
 2007-02-07  Zack Weinberg  <zackw@panix.com>
 
 	* tests/two_parent_workspace_commands_that_fail
@@ -8,7 +14,7 @@
 2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* cmd_merging.cc (CMD(merge_into_workspace)): N() out if user is
-f	trying to merge in the workspace's current revision.
+	trying to merge in the workspace's current revision.
 	* tests/merge_into_workspace_same_rev/*: New test.
 	* testsuite.lua: Add it.
 
